2006-02-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java: Added @throws clause to constructors.
	(mathContext): Removed this unneeded field.
	(BigDecimal(int, MathContext)): New constructor.
	(BigDecimal(BigInteger, int, MathContext)): Likewise.
	(multiply(BigDecimal, MathContext)): New method.
	(negate(MathContext)): Likewise.
	(plus(MathContext)): Likewise.
	(numDigitsInLong): Fixed to properly handle negatives.
	
2006-02-24  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(BigDecimal(long, MathContext)): New constructor.
	(BigDecimal(BigInteger, MathContext)): Likewise.
	(BigDecimal(String, MathContext)): Likewise.
	(BigDecimal(double, MathContext)): Likewise.
	(round): Fixed a typo where the precision field was used instead of a
	call to the precision method, and also store the new precision in the
	returned BigDecimal.
	(abs(MathContext)): New method.

2006-02-24  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java
	(toBigInteger): Fixed problem where this method couldn't handle 
	negative values for scale.
	(toBigIntegerExact): New method.
	(stripTrailingZeros): Likewise.

2006-02-23  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(toString): Fixed a problem where the negative sign was being displayed
	twice in the exponent.
	(toEngineeringString): New method.
	(toPlainString): Likewise.
	(pow): Likewise.

2006-02-23  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(toString): Rewrote this method to behave as specified.  Added API
	comments to explain behaviour.
	(scaleByPowerOfTen): New method.

2006-02-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(BigDecimal(char[], int, int, MathContext)): New constructor.
	(BigDecimal(char[], MathContext)): Likewise.
	(BigDecimal(char[])): Likewise.
	(BigDecimal(char[], int, int)): Likewise.
	(BigDecimal(String)): Fixed handling of exponent and scale.
